# discovery

./: CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md
cmake/: GetGoogleTest.cmake
src/: CMakeLists.txt  Client.cpp  Client.h  Device.cpp  Device.h  McReceive.cpp  McReceive.h  McSend.cpp  McSend.h  Protocol.h  Server.cpp  Server.h  discovery.cpp  main.cpp
